[gd_scene load_steps=6 format=2]

[ext_resource path="res://stats.tres" type="StyleBox" id=1]
[ext_resource path="res://renner-bold.tres" type="DynamicFont" id=2]
[ext_resource path="res://stats/stats.gd" type="Script" id=3]
[ext_resource path="res://stats/barfg.tres" type="StyleBox" id=4]
[ext_resource path="res://stats/barbg.tres" type="StyleBox" id=5]

[node name="statsBar" type="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 292.0
margin_bottom = 68.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 282.0
margin_bottom = 161.0
custom_styles/panel = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 278.0
margin_bottom = 157.0
alignment = 1

[node name="Money" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 8.0
margin_right = 274.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.32549, 0.415686, 0.682353, 1 )
text = "Money: $10
"

[node name="Health" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 274.0
margin_bottom = 69.0
custom_colors/font_color = Color( 0.32549, 0.415686, 0.682353, 1 )
text = "Health"

[node name="HealthBar" type="ProgressBar" parent="PanelContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 274.0
margin_bottom = 82.0
custom_styles/fg = ExtResource( 4 )
custom_styles/bg = ExtResource( 5 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Happiness" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 274.0
margin_bottom = 100.0
custom_colors/font_color = Color( 0.32549, 0.415686, 0.682353, 1 )
text = "Happiness"

[node name="HappinessBar" type="ProgressBar" parent="PanelContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 274.0
margin_bottom = 113.0
custom_styles/fg = ExtResource( 4 )
custom_styles/bg = ExtResource( 5 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credit" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 117.0
margin_right = 274.0
margin_bottom = 131.0
custom_colors/font_color = Color( 0.32549, 0.415686, 0.682353, 1 )
text = "Credit"

[node name="CreditBar" type="ProgressBar" parent="PanelContainer/VBoxContainer"]
margin_top = 135.0
margin_right = 274.0
margin_bottom = 144.0
custom_styles/fg = ExtResource( 4 )
custom_styles/bg = ExtResource( 5 )
max_value = 1000.0
value = 500.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}
